--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "antd": "^4.22.3",
+    "axios": "^0.27.2",
+    "ethers": "^5.6.9",
+    "formidable": "^2.0.1",
     "next": "12.2.3",
     "next-images": "^1.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.5",
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
